[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
# https://github.com/Warhorst/shadowcasting
shadowcasting = { path = "../shadowcasting" }
# https://github.com/Warhorst/pad
pad = { path = "../pad" }
bevy = "0.10.1"